# simple_rust_example

./: Cargo.toml  README.md
benches/: benchmark1.rs
examples/: example1.rs
src/: main.rs
tests/: integration_test.rs
